WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164820
REGRESSION (
r208672
): Crash in com.apple.WebCore: WebCore::DatabaseContext::stopDatabases + 34
https://bugs.webkit.org/show_bug.cgi?id=164820
Summary
REGRESSION (r208672): Crash in com.apple.WebCore: WebCore::DatabaseContext::s...
Darin Adler
Reported
2016-11-16 08:14:22 PST
REGRESSION (
r208672
): Crash in com.apple.WebCore: WebCore::DatabaseContext::stopDatabases + 34
Attachments
Patch
(3.31 KB, patch)
2016-11-16 08:18 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2016-11-16 08:18:57 PST
Created
attachment 294941
[details]
Patch
WebKit Commit Bot
Comment 2
2016-11-16 12:27:05 PST
Comment on
attachment 294941
[details]
Patch Clearing flags on attachment: 294941 Committed
r208803
: <
http://trac.webkit.org/changeset/208803
>
WebKit Commit Bot
Comment 3
2016-11-16 12:27:08 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4
2016-11-16 12:47:51 PST
rdar://problem/29274545
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug