Source/WebCore/Modules/webdatabase/DatabaseContext.cpp
@@ -119,8 +119,8 @@ DatabaseContext::~DatabaseContext()
 // It is not safe to just delete the context here.
 void DatabaseContext::contextDestroyed()
 {
-    stopDatabases();
     ActiveDOMObject::contextDestroyed();
+    stopDatabases();
 }
 
 // stop() is from stopActiveDOMObjects() which indicates that the owner Frame
@@ -163,11 +163,6 @@ bool DatabaseContext::stopDatabases(DatabaseTaskSynchronizer* synchronizer)
     // FIXME: What guarantees this is never called after the script execution context is null?
     ASSERT(scriptExecutionContext());
 
-    if (scriptExecutionContext()->databaseContext()) {
-        ASSERT(scriptExecutionContext()->databaseContext() == this);
-        scriptExecutionContext()->setDatabaseContext(nullptr);
-    }
-
     // Though we initiate termination of the DatabaseThread here in
     // stopDatabases(), we can't clear the m_databaseThread ref till we get to
     // the destructor. This is because the Databases that are managed by
@@ -177,14 +172,19 @@ bool DatabaseContext::stopDatabases(DatabaseTaskSynchronizer* synchronizer)
     // why our ref count is 0 then and we're destructing). Then, the
     // m_databaseThread RefPtr destructor will deref and delete the
     // DatabaseThread.
-
-    if (m_databaseThread && !m_hasRequestedTermination) {
+    bool result = m_databaseThread && !m_hasRequestedTermination;
+    if (result) {
         m_databaseThread->requestTermination(synchronizer);
         m_hasRequestedTermination = true;
-        return true;
     }
 
-    return false;
+    auto& context = *scriptExecutionContext();
+    if (context.databaseContext()) {
+        ASSERT(context.databaseContext() == this);
+        context.setDatabaseContext(nullptr);
+    }
+
+    return result;
 }
 
 bool DatabaseContext::allowDatabaseAccess() const
